code/css/style.css
/* ... */
@media (min-width: 668px) and (max-width: 1023px) {
    .first-section {
        max-width: 1023px;
        width: 100%;
        display: flex;
        flex-direction: column-reverse;
        height: 1003px;
    }
    .first-right h2 {
        display: none;
    }
    .first-right h3 {
        display: none;
    }
    .first-right {
        max-width: 1023px;
        width: 100%;
        height: 420px;
    }
    .first-left {
        height: 583px;
    }
    .logo {
        height: 400px;
        margin: 10px 0 20px 0;
        object-fit: scale-down;
    }
    .profile-picture {
        margin-right: 20px;
    }
    .first-left-intro {
        max-width: 60%;
    }
    .scroll {
        top: 98%;
    }
    .tech-section {
        max-width: 1023px;
        width: 100%;
    }
    .tech-container {
        flex-direction: column;
        align-items: center;
    }
    .tech-header {
        margin-bottom: 80px;
    }
    .projects-section {
        max-width: 1023px;
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        height: 3100px;
        margin-bottom: 0;
    }
    .projects-header {
        text-align: center;
    }
    .projects-container {
        align-items: center;
        max-width: 667px;
        gap: 80px;
    }
    .projects-item {
        justify-content: center;
        max-width: 667px;
    }
    .projects-item img {
        max-width: 185px;
        object-fit: cover;
    }
    .words-section {
        max-width: 1023px;
        width: 100%;
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        align-content: center;
    }
    .words-header {
        text-align: left;
        margin-top: 80px;
    }
    .words-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 20px;
        margin-bottom: 60px;
        gap: 90px;
    }
    .words-items {
        max-width: 564px;
    }
    .skills-section {
        max-width: 1023px;
        width: 100%;
        display: flex;
        flex-direction: column;
    }
    .skills-section h2 {
        margin-top: 60px;
    }
    .skills-container {
        grid-template-columns: 35% 35%;
        max-width: 1023px;
        width: 100%;
        height: auto;
        margin: 0;
    }
    .skills-items {
        width: 200px;
    }
    .skills-items h5 {
        margin: 40px 0 10px 0;
    }
    .contact-section {
        max-width: 1023px;
        width: 100%;
    }
    .contact-profile {
        width: 520px;
    }
}
/* ... */

